; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/terasic/mtl/extr_terasic_mtl_reg.c_terasic_mtl_reg_textframebufaddr_set.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/terasic/mtl/extr_terasic_mtl_reg.c_terasic_mtl_reg_textframebufaddr_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.terasic_mtl_softc = type { i32 }

@TERASIC_MTL_OFF_TEXTFRAMEBUFADDR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @terasic_mtl_reg_textframebufaddr_set(%struct.terasic_mtl_softc* %0, i32 %1) #0 {
  %3 = alloca %struct.terasic_mtl_softc*, align 8
  %4 = alloca i32, align 4
  store %struct.terasic_mtl_softc* %0, %struct.terasic_mtl_softc** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = call i32 @htole32(i32 %5)
  store i32 %6, i32* %4, align 4
  %7 = load %struct.terasic_mtl_softc*, %struct.terasic_mtl_softc** %3, align 8
  %8 = getelementptr inbounds %struct.terasic_mtl_softc, %struct.terasic_mtl_softc* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load i32, i32* @TERASIC_MTL_OFF_TEXTFRAMEBUFADDR, align 4
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @bus_write_4(i32 %9, i32 %10, i32 %11)
  ret void
}

declare dso_local i32 @htole32(i32) #1

declare dso_local i32 @bus_write_4(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
